--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
